--- a/index.html
+++ b/index.html
@@ -4,23 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" href="style.css">
     <title>calculator</title>
 </head>
 <body>
-    <div class="container">
-    <h1>Calculator</h1>
+    <div class="container btn-light">
+        <h1 class="display-4 mb-3">Calculator</h1>
 
     
 <div class="calculator">
-    <input type="text" name="screen" id="screen">
-   
+    <input type="text" name="screen" id="screen" readonly>
+    <input class="btn border btn-danger" style="width: 50%;"
+    type="button" id="clear" value=" Back " onclick="back()">
     <table>
         <tr>
             <td><button>(</button></td>
             <td><button>)</button></td>
-            <td><button>C</button></td>
-            <td><button><-</button></td>
+            <td><button>Clear</button></td>
+            
         </tr>
         <tr>
             <td><button>7</button></td>
@@ -47,8 +49,15 @@
             <td><button>/</button></td>
         </tr>
     </table>
+   
 </div>
+<div class="col-4 history">
+    <h2>History</h2><input class="btn border btn-danger" style="width: 100%;"
+    type="button" id="clear" value=" Clear " onclick="clearHist()">
+    <ul id="history">
+    </ul>
 </div>
+
 </body>
 <script src="index.js"></script>
 </html>
